--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -1,6 +1,6 @@
 <div id="listings-page">
   <div class="title-bar clearfix">
-    <div class="main-col span8">
+    <div class="main-col">
       <img class="b4cm-icon" src="../images/b4cm-icon-study.png">
       <h2>Study</h2>
       <h3>Palo Alto, CA 94301</h3>
@@ -20,9 +20,12 @@
       </a>
       <h6>1-10 of 100</h6>
     </div>
-    <div class="side-col span4">
-      <div class="ad">
-        Ad Holder
+    <div class="side-col">
+      <div class="ad-book">
+        <a ng-href="http://www.amazon.com/gp/product/0140437649/ref=as_li_ss_tl?ie=UTF8&camp=1789&creative=390957&creativeASIN=0140437649&linkCode=as2&tag=coding4kicks-20">
+          <img src="../images/books/historyofdeclineandfall.jpg">
+          <h6>The History of the Decline and Fall of the Roman Empire</h6>  
+        </a>    
       </div>
     </div>
   </div>
