--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -5,7 +5,7 @@
       <h2>Study</h2>
       <h3>Palo Alto, CA 94301</h3>
       <form class="form-horizontal find-spot">
-        <h4>New Spot: </h4>
+        <h4>Search for Spots: </h4>
         <select class="type">
           <option>Food</option>
           <option>Study</option>
@@ -34,7 +34,7 @@
 
   <div class="page">
 
-    <div class="listings">
+    <div class="listings main-col">
 
       <div class="listing" ng-click="findSpot()">
         <div class="rank">
