--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -18,7 +18,6 @@
       <a  ng-href="#/addSpot">
         <button class="btn add-spot">Add Spot</button>
       </a>
-      <h6>1-10 of 100</h6>
     </div>
     <div class="side-col">
       <div class="ad-book">
@@ -35,6 +34,7 @@
   <div class="page">
 
     <div class="listings main-col">
+      <h6>1-10 of 100</h6>
 
       <div class="listing" ng-click="findSpot()">
         <div class="rank">
@@ -135,7 +135,7 @@
     </div>
 
     <div class="side-col">
-      <div class="map">MAP</div>
+      <div id="map-canvas"/>
     </div>
   </div>
 </div>
