--- a/app/views/spot.html
+++ b/app/views/spot.html
@@ -1,7 +1,7 @@
 <div id="spot-page">
 
   <div class="title-bar clearfix">
-    <div class="main-col span8">
+    <div class="main-col">
       <h2>Philz Coffee</h2>
       <div class="rating">
         <div class="stars">
@@ -28,7 +28,7 @@
         </div>
       </div>
     </div>
-    <div class="side-col span4">
+    <div class="side-col">
       <div class="map">
         Map
       </div>
@@ -38,283 +38,283 @@
   </div>
   <hr>
 
-  <div class="crowd-factor">
-    <h2>Crowd Factor: <span class="current-time">Tuesday, 5pm</span></h2>
-    <h4>73 Watchers</h4>
-    <a ng-href="#/addWatch">
+  <div class="visualize">
+    <div class="crowd-factor">
+      <h3>Crowd Factor: <span class="current-time empty">Tuesday, 11pm</span></h3>
+      <h4>73 Watchers</h4>
       <button type="button" class="btn">Add Herd Watch</button>
-    </a>
-    <div class="crowd-visuals">
-      <div class="timeslot">
-        <h5>Morning</h5>
-        <table>
-          <tr>
-            <th></th>
-            <th>5</th>
-            <th>6</th>
-            <th>7</th>
-            <th>8</th>
-            <th>9</th>
-            <th>10</th>
-          </tr>
-          <tr>
-            <td>M</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>Tu</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>W</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>Th</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>F</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>Sa</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>Su</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-        </table>
-      </div>
-      <div class="timeslot">
-        <h5>Afternoon</h5>
-        <table>
-          <tr>
-            <th></th>
-            <th>11</th>
-            <th>12</th>
-            <th>1</th>
-            <th>2</th>
-            <th>3</th>
-            <th>4</th>
-          </tr>
-          <tr>
-            <td>M</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>Tu</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>W</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>Th</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>F</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>Sa</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>Su</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-        </table>
-      </div>
-      <div class="timeslot">
-        <h5>Evening</h5>
-        <table>
-          <tr>
-            <th></th>
-            <th>5</th>
-            <th>6</th>
-            <th>7</th>
-            <th>8</th>
-            <th>9</th>
-            <th>10</th>
-          </tr>
-          <tr>
-            <td>M</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>Tu</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>W</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>Th</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>F</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>Sa</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-          <tr>
-            <td>Su</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-        </table>
-      </div>
-      <div class="labels">
-        <div class="row1">
-          <div class="empty">
-            <div class="color">
-            </div>
-            <h5>Almost Empty</h5>
-          </div>
-          <div class="average">
-            <div class="color">
-            </div>
-            <h5>Average Traffic</h5>
-          </div>
-          <div class="herd">
-            <div class="color">
-            </div>
-            <h5>Herd Alert</h5>
-          </div>
+      <div class="crowd-visuals">
+        <div class="timeslot">
+          <h5>Morning</h5>
+          <table class="morning-table">
+            <tr>
+              <th></th>
+              <th>5</th>
+              <th>6</th>
+              <th>7</th>
+              <th>8</th>
+              <th>9</th>
+              <th>10</th>
+            </tr>
+            <tr class="monday-row">
+              <td>M</td>
+              <td class="closed-square"></td>
+              <td class="empty-square"></td>
+              <td class="few-square"></td>
+              <td class="herd-square"></td>
+              <td class="ave-square"></td>
+              <td class="ave-square"></td>
+            </tr>
+            <tr class="tuesday-row">
+              <td>Tu</td>
+              <td class="closed-square"></td>
+              <td class="empty-square"></td>
+              <td class="few-square"></td>
+              <td class="herd-square"></td>
+              <td class="ave-square"></td>
+              <td class="ave-square"></td>
+            </tr>
+            <tr class="wednesday-row">
+              <td>W</td>
+              <td class="closed-square"></td>
+              <td class="empty-square"></td>
+              <td class="few-square"></td>
+              <td class="herd-square"></td>
+              <td class="few-square"></td>
+              <td class="ave-square"></td>
+            </tr>
+            <tr class="thursday-row">
+              <td>Th</td>
+              <td class="closed-square"></td>
+              <td class="empty-square"></td>
+              <td class="ave-square"></td>
+              <td class="herd-square"></td>
+              <td class="crowded-square"></td>
+              <td class="ave-square"></td>
+            </tr>
+            <tr class="friday-row">
+              <td>F</td>
+              <td class="closed-square"></td>
+              <td class="empty-square"></td>
+              <td class="ave-square"></td>
+              <td class="crowded-square"></td>
+              <td class="herd-square"></td>
+              <td class="crowded-square"></td>
+            </tr>
+            <tr class="saturday-row">
+              <td>Sa</td>
+              <td class="closed-square"></td>
+              <td class="empty-square"></td>
+              <td class="empty-square"></td>
+              <td class="ave-square"></td>
+              <td class="crowded-square"></td>
+              <td class="herd-square"></td>
+            </tr>
+            <tr class="sunday-row">
+              <td>Su</td>
+              <td class="closed-square"></td>
+              <td class="empty-square"></td>
+              <td class="empty-square"></td>
+              <td class="few-square"></td>
+              <td class="few-square"></td>
+              <td class="ave-square"></td>
+            </tr>
+          </table>
         </div>
-        <br>
-        <div class="row2">
-          <div class="few">
-            <div class="color">
+        <div class="timeslot">
+          <h5>Afternoon</h5>
+          <table class="afternoon-table">
+            <tr>
+              <th></th>
+              <th>11</th>
+              <th>12</th>
+              <th>1</th>
+              <th>2</th>
+              <th>3</th>
+              <th>4</th>
+            </tr>
+            <tr class="monday-row">
+              <td>M</td>
+              <td class="empty-square"></td>
+              <td class="few-square"></td>
+              <td class="ave-square"></td>
+              <td class="herd-square"></td>
+              <td class="herd-square"></td>
+              <td class="crowded-square"></td>
+            </tr>
+            <tr class="tuesday-row">
+              <td>Tu</td>
+              <td class="empty-square"><img class="marker" src="../images/star-icon.png"></td>
+              <td class="few-square"></td>
+              <td class="crowded-square"></td>
+              <td class="herd-square"></td>
+              <td class="crowded-square"></td>
+              <td class="crowded-square"></td>
+            </tr>
+            <tr class="wednesday-row">
+              <td>W</td>
+              <td class="few-square"></td>
+              <td class="ave-square"></td>
+              <td class="crowded-square"></td>
+              <td class="herd-square"></td>
+              <td class="herd-square"></td>
+              <td class="crowded-square"></td>
+            </tr>
+            <tr class="thursday-row">
+              <td>Th</td>
+              <td class="empty-square"></td>
+              <td class="few-square"></td>
+              <td class="ave-square"></td>
+              <td class="herd-square"></td>
+              <td class="crowded-square"></td>
+              <td class="herd-square"></td>
+            </tr>
+            <tr class="friday-row">
+              <td>F</td>
+              <td class="ave-square"></td>
+              <td class="few-square"></td>
+              <td class="crowded-square"></td>
+              <td class="herd-square"></td>
+              <td class="herd-square"></td>
+              <td class="crowded-square"></td>
+            </tr>
+            <tr class="saturday-row">
+              <td>Sa</td>
+              <td class="ave-square"></td>
+              <td class="crowded-square"></td>
+              <td class="herd-square"></td>
+              <td class="crowded-square"></td>
+              <td class="crowded-square"></td>
+              <td class="crowded-square"></td>
+            </tr>
+            <tr class="sunday-row">
+              <td>Su</td>
+              <td class="few-square"></td>
+              <td class="ave-square"></td>
+              <td class="ave-square"></td>
+              <td class="crowded-square"></td>
+              <td class="crowded-square"></td>
+              <td class="ave-square"></td>
+            </tr>
+          </table>
+        </div>
+        <div class="timeslot">
+          <h5>Evening</h5>
+          <table class="evening-table">
+            <tr>
+              <th></th>
+              <th>5</th>
+              <th>6</th>
+              <th>7</th>
+              <th>8</th>
+              <th>9</th>
+              <th>10</th>
+            </tr>
+            <tr class="monday-row">
+              <td>M</td>
+              <td class="crowded-square"></td>
+              <td class="ave-square"></td>
+              <td class="few-square"></td>
+              <td class="empty-square"></td>
+              <td class="closed-square"></td>
+              <td class="closed-square"></td>
+            </tr>
+            <tr class="tuesday-row">
+              <td>Tu</td>
+              <td class="crowded-square"></td>
+              <td class="ave-square"></td>
+              <td class="few-square"></td>
+              <td class="empty-square"></td>
+              <td class="closed-square"></td>
+              <td class="closed-square"></td>
+            </tr>
+            <tr class="wednesday-row">
+              <td>W</td>
+              <td class="crowded-square"></td>
+              <td class="ave-square"></td>
+              <td class="few-square"></td>
+              <td class="empty-square"></td>
+              <td class="closed-square"></td>
+              <td class="closed-square"></td>
+            </tr>
+            <tr class="thursday-row">
+              <td>Th</td>
+              <td class="crowded-square"></td>
+              <td class="ave-square"></td>
+              <td class="few-square"></td>
+              <td class="few-square"></td>
+              <td class="closed-square"></td>
+              <td class="closed-square"></td>
+            </tr>
+            <tr class="friday-row">
+              <td>F</td>
+              <td class="crowded-square"></td>
+              <td class="ave-square"></td>
+              <td class="few-square"></td>
+              <td class="few-square"></td>
+              <td class="closed-square"></td>
+              <td class="closed-square"></td>
+            </tr>
+            <tr class="saturday-row">
+              <td>Sa</td>
+              <td class="crowded-square"></td>
+              <td class="few-square"></td>
+              <td class="few-square"></td>
+              <td class="closed-square"></td>
+              <td class="closed-square"></td>
+              <td class="closed-square"></td>
+            </tr>
+            <tr class="sunday-row">
+              <td>Su</td>
+              <td class="ave-square"></td>
+              <td class="few-square"></td>
+              <td class="few-square"></td>
+              <td class="closed-square"></td>
+              <td class="closed-square"></td>
+              <td class="closed-square"></td>
+            </tr>
+          </table>
+        </div>
+        <div class="labels">
+          <div class="row1">
+            <div class="empty">
+              <div class="empty-square color">
+              </div>
+              <h5>Almost Empty</h5>
             </div>
-            <h5>A Few People</h5>
+            <div class="average">
+              <div class="ave-square color">
+              </div>
+              <h5>Average Traffic</h5>
+            </div>
+            <div class="herd">
+              <div class="herd-square color">
+              </div>
+              <h5>Herd Alert</h5>
+            </div>
           </div>
-          <div class="crowded">
-            <div class="color">
+          <br>
+          <div class="row2">
+            <div class="few">
+              <div class="few-square color">
+              </div>
+              <h5>A Few People</h5>
             </div>
-            <h5>Crowded</h5>
-          </div>
-          <div class="closed">
-            <div class="color">
+            <div class="crowded">
+              <div class="crowded-square color">
+              </div>
+              <h5>Crowded</h5>
             </div>
-            <h5>Closed</h5>
+            <div class="closed">
+              <div class="closed-square color">
+              </div>
+              <h5>Closed</h5>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
+  </div> 
 
   <div class="reviews">
     <h6 class="review-nums">1-10 of 100</h6>
@@ -389,7 +389,7 @@
     </div>
   </div>
 
-  <div class="side-col span4">
+  <div class="side-col">
     <div class="find-nearby">
       <h3>Find Nearby:</h3>
       <div class="nearby-type">
