--- a/app/views/spot.html
+++ b/app/views/spot.html
@@ -15,19 +15,20 @@
       </div>
       <div class="spot-types">
         <div class="type">
-          <div class="type-icon"></div>
-          <div>Study</div>
+          <img class="b4cm-icon" src="../images/b4cm-icon-study.png">
+          <div class="type-text">Study</div>
         </div>
         <div class="type">
-          <div class="type-icon"></div>
-          <div>Food</div>
+          <img class="b4cm-icon" src="../images/b4cm-icon-food.png">
+          <div class="type-text">Food</div>
         </div>
         <div class="type">
-          <div class="type-icon"></div>
-          <div>Social</div>
+          <img class="b4cm-icon" src="../images/b4cm-icon-social.png">
+          <div class="type-text">Social</div>
         </div>
       </div>
     </div>
+
     <div class="side-col">
       <div class="map">
         Map
