--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -114,7 +114,7 @@ a {
 
 .map {
   background: black;
-  height: 250px;
+  height: 200px;
   width: 250px;
   text-align: center;
   padding-top: 50px;
@@ -561,6 +561,13 @@ a {
     .type-text {
       font-size: 6px;
     }
+  }
+
+  .visualize {
+    @include page-container;
+    background-color: $acc-light;
+    border-radius: 10px;
+    padding: 20px 0;
   }
 
   .reviews {
