--- a/app/views/spot.html
+++ b/app/views/spot.html
@@ -37,6 +37,7 @@
       </div>
     </div>
   </div>
+
   <hr>
 
   <div class="visualize">
@@ -317,76 +318,80 @@
     </div>
   </div> 
 
+  <hr>
+
   <div class="reviews">
-    <h6 class="review-nums">1-10 of 100</h6>
-    <a ng-href="#/addReview">
-      <button class="btn add-review">Add Review</button>
-    </a>
-    <hr>
-    <div class="listings span8">
+    <div class="main-col">
+      <h6 class="review-nums">1-10 of 100</h6>
+      <a ng-href="#/addReview">
+        <button class="btn add-review">Add Review</button>
+      </a>
 
-    <div class="listing">
-      <div class="rank">
-        <h4>1.</h4>
-      </div>
-      <div class="info"> 
-        <h4 class="title">Steve S.</h4>
-        <div class="rating">
-          <div class="stars">
-            <img src="images/star-icon.png">
-            <img src="images/star-icon.png">
-            <img src="images/star-icon.png">
-            <img src="images/star-icon-half.png">
-            <img src="images/star-icon-empty.png">
+      <hr>
+      <div class="listings">
+      <div class="listing">
+        <div class="rank">
+          <h4>1.</h4>
+        </div>
+        <div class="info"> 
+          <h4 class="title">Steve S.</h4>
+          <div class="rating">
+            <div class="stars">
+              <img src="images/star-icon.png">
+              <img src="images/star-icon.png">
+              <img src="images/star-icon.png">
+              <img src="images/star-icon-half.png">
+              <img src="images/star-icon-empty.png">
+            </div>
           </div>
         </div>
+        <p>Tesora = King of Coffee</p>
+        <hr>
       </div>
-      <p>Tesora = King of Coffee</p>
-      <hr>
-    </div>
 
-    <div class="listing">
-      <div class="rank">
-        <h4>2.</h4>
-      </div>
-      <div class="info"> 
-        <h4 class="title">Jack O.</h4>
-        <div class="rating">
-          <div class="stars">
-            <img src="images/star-icon.png">
-            <img src="images/star-icon.png">
-            <img src="images/star-icon.png">
-            <img src="images/star-icon-half.png">
-            <img src="images/star-icon-empty.png">
+      <div class="listing">
+        <div class="rank">
+          <h4>2.</h4>
+        </div>
+        <div class="info"> 
+          <h4 class="title">Jack O.</h4>
+          <div class="rating">
+            <div class="stars">
+              <img src="images/star-icon.png">
+              <img src="images/star-icon.png">
+              <img src="images/star-icon.png">
+              <img src="images/star-icon-half.png">
+              <img src="images/star-icon-empty.png">
+            </div>
           </div>
         </div>
+        <p>The only coffee shop were ordering a black coffee is seen as a faux paus.</p>
+        <hr>
       </div>
-      <p>The only coffee shop were ordering a black coffee is seen as a faux paus.</p>
-      <hr>
-    </div>
 
-    <div class="listing">
-      <div class="rank">
-        <h4>3.</h4>
-      </div>
-      <div class="info"> 
-        <h4 class="title">Whiny B.</h4>
-        <div class="rating">
-          <div class="stars">
-            <img src="images/star-icon.png">
-            <img src="images/star-icon.png">
-            <img src="images/star-icon.png">
-            <img src="images/star-icon-half.png">
-            <img src="images/star-icon-empty.png">
+      <div class="listing">
+        <div class="rank">
+          <h4>3.</h4>
+        </div>
+        <div class="info"> 
+          <h4 class="title">Whiny B.</h4>
+          <div class="rating">
+            <div class="stars">
+              <img src="images/star-icon.png">
+              <img src="images/star-icon.png">
+              <img src="images/star-icon.png">
+              <img src="images/star-icon-half.png">
+              <img src="images/star-icon-empty.png">
+            </div>
           </div>
         </div>
+        <p>Worth the hyp.  Mint leaves in my mint coffe make me happy.  Afterwards I get a coffee headache.</p>
+        <hr>
       </div>
-      <p>Worth the hyp.  Mint leaves in my mint coffe make me happy.  Afterwards I get a coffee headache.</p>
-      <hr>
-    </div>
 
-    <div class="more">
-      <a>More Results</a>
+      <div class="more">
+        <a>More Results</a>
+      </div>
     </div>
   </div>
 
@@ -412,5 +417,4 @@
   </div>
 
   </div>
-
 </div>
