--- a/app/views/spot.html
+++ b/app/views/spot.html
@@ -399,21 +399,25 @@
     <div class="find-nearby">
       <h3>Find Nearby:</h3>
       <div class="nearby-type">
-        <div class="type-icon"></div>
-        <h3>Food</h3>
+        <img class="b4cm-icon" src="../images/b4cm-icon-food.png">
+        <h4>Food</h4>
       </div>
       <div class="nearby-type">
-        <div class="type-icon"></div>
-        <h3>Study</h3>
+        <img class="b4cm-icon" src="../images/b4cm-icon-study.png">
+        <h4>Study</h4>
       </div>
       <div class="nearby-type">
-        <div class="type-icon"></div>
-        <h3>Social</h3>
+        <img class="b4cm-icon" src="../images/b4cm-icon-social.png">
+        <h4>Social</h4>
       </div>
     </div>
-    <div class="ad">
-      Ad Holder
-    </div>
+
+      <div class="ad-book">
+        <a ng-href="http://www.amazon.com/gp/product/0140437649/ref=as_li_ss_tl?ie=UTF8&camp=1789&creative=390957&creativeASIN=0140437649&linkCode=as2&tag=coding4kicks-20">
+          <img src="../images/books/historyofdeclineandfall.jpg">
+          <h6>The History of the Decline and Fall of the Roman Empire</h6>  
+        </a>    
+      </div>
   </div>
 
   </div>
