Style add review page.

--- a/app/views/addReview.html
+++ b/app/views/addReview.html
@@ -1,15 +1,9 @@
 <div id="add-review-page">
-  <h3>Add a Review:</h3>
+  <h3>Add a Review for:</h3>
 
   <h4>Philz Coffee</h4>
   <h5>448 Forest Ave, Palo Alto</h5>
   <form class="form-horizontal">
-    <div class="control-group">
-      <label class="control-label" for="inputWriteup">Write up</label>
-      <div class="controls">
-        <textarea id="inputWriteup" placeholder="Your review"></textarea>
-      </div>
-    </div>
     
     <div class="control-group">
       <label class="control-label" for="inputStars">Stars</label>
@@ -27,6 +21,13 @@
           <option>4 1/2</option>
           <option>5</option>
         </select>     
+      </div>
+    </div>
+
+    <div class="control-group">
+      <label class="control-label" for="inputWriteup">Write up</label>
+      <div class="controls">
+        <textarea id="inputWriteup" placeholder="Your review"></textarea>
       </div>
     </div>
 
