--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -648,6 +648,31 @@ a {
   }
 }
 
+/******************
+*** Add Review Page 
+*******************/
+#add-review-page {
+  background-color: $acc-light;
+  border-radius: 10px;
+  padding: 10px 0 0 20px;
+
+  h3 {
+    margin: 0;
+  }
+
+  .controls {
+    margin: 0 0 0 20px;
+  }
+
+  .control-label {
+    width: 80px;
+    margin: 0 10px 0 0;
+  }
+
+  textarea {
+    width: 600px;
+  }
+}
 
 /******************
 *** Crowd Factor 
