Switch on focus color for form input text and text area.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -188,6 +188,10 @@ a {
   }
 }
 
+textarea:focus,
+input[type='text']:focus {
+  border-color: $comp1-dark;
+}
 /******************
 *** NAVBAR
 *******************/
