--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -696,6 +696,12 @@ input[type='text']:focus {
     margin: 10px 0 0 0;
   }
 
+  .current-time {
+    background: $acc-dark;
+    border-radius: 5px;
+    padding: 5px;
+  }
+
   .timeslot {
     display: inline-block;
     margin-left: -27px;
