--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -396,7 +396,7 @@ input[type='text']:focus {
     }
 
     h2 {
-      margin: 0 0 0 160;
+      margin: 0 0 0 160px;
     }
 
     h2:nth-child(2) {
