Adjust background color and border for current time in crowd factor box.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -697,7 +697,8 @@ input[type='text']:focus {
   }
 
   .current-time {
-    background: $acc-dark;
+    background: #999999;
+    border: 1px solid black;
     border-radius: 5px;
     padding: 5px;
   }
