--- a/app/views/main.html
+++ b/app/views/main.html
@@ -62,7 +62,7 @@
     </div>
 
     <div class="crowd-factor">
-      <h3>Crowd Factor: <span class="current-time empty">Tuesday, 11pm</span></h3>
+      <h3>Current Time: <span class="current-time empty">Tuesday, 11pm</span></h3>
       <h4>73 Watchers</h4>
       <button type="button" class="btn">Add Herd Watch</button>
       <div class="crowd-visuals">
