--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -430,7 +430,7 @@ input[type='text']:focus {
     }
 
     form {
-      margin: 10px 0 0 100px;
+      margin: 25px 0 0 100px;
     }
 
     h4 {
@@ -453,8 +453,7 @@ input[type='text']:focus {
     }
 
     .add-spot {
-      float: right;
-      margin: 30px 22px 0 0;
+      margin: 0 0 14px 44px;
     }
   }
 
