--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -489,6 +489,10 @@ input[type='text']:focus {
 
     .info {
       padding: 0 0 0 5px;
+
+      &:hover {
+        cursor: pointer;
+      }
     }
 
     .watchers {
