--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -36,11 +36,11 @@
     <div class="listings main-col">
       <h6>1-10 of 100</h6>
 
-      <div class="listing" ng-click="findSpot()">
+      <div class="listing">
         <div class="rank">
           <h4>1.</h4>
         </div>
-        <div class="info"> 
+        <div class="info" ng-click="findSpot()"> 
           <h4 class="title">Philz Coffee</h4>
           <h5 class="address">101 Forest Ave. Palo Alto</h5>
           <div class="rating">
@@ -67,11 +67,11 @@
         <hr>
       </div>
 
-      <div class="listing" ng-click="findSpot()">
+      <div class="listing">
         <div class="rank">
           <h4>2.</h4>
         </div>
-        <div class="info"> 
+        <div class="info" ng-click="findSpot()"> 
           <h4 class="title">Peet's Coffee & Tea</h4>
           <h5 class="address">448 University Ave. Palo Alto</h5>
           <div class="rating">
@@ -98,11 +98,11 @@
         <hr>
       </div>
 
-      <div class="listing" ng-click="findSpot()">
+      <div class="listing">
         <div class="rank">
           <h4>3.</h4>
         </div>
-        <div class="info"> 
+        <div class="info" ng-click="findSpot()"> 
           <h4 class="title">Coupa Cafe</h4>
           <h5 class="address">638 Ramona St. Palo Alto</h5>
           <div class="rating">
