Add map place holder to listings page.

--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -135,7 +135,9 @@
     </div>
 
     <div class="side-col">
-      <div id="map-canvas"/>
+      <div class="map">
+        Map
+      </div>
     </div>
   </div>
 </div>
