--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -145,7 +145,7 @@
         draggable="true"
         fit="false"
         events="eventsProperty"
-        style="height: 240px; width: 100%; border: 1px solid;">
+        style="height: 300px; width: 280; border: 1px solid;">
       </div> 
     </div>
   </div>
