--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -40,6 +40,7 @@
         <div class="rank">
           <h4>1.</h4>
         </div>
+        <img class="spot-pic" src="../images/spot-philz.jpg">
         <div class="info" ng-click="findSpot()"> 
           <h4 class="title">Philz Coffee</h4>
           <h5 class="address">101 Forest Ave. Palo Alto</h5>
@@ -55,11 +56,11 @@
           </div>
           <div class="crowd-rank">
             <div class="crowd-bar">
-              <div class="box"></div>
-              <div class="box"></div>
-              <div class="box"></div>
-              <div class="box"></div>
-              <div class="box"></div>
+              <div class="box empty-square"></div>
+              <div class="box few-square"></div>
+              <div class="box crowded-square"></div>
+              <div class="box herd-square"></div>
+              <div class="box herd-square"></div>
             </div>
             <div class="watchers">549 Watchers</div>
           </div>
@@ -71,6 +72,7 @@
         <div class="rank">
           <h4>2.</h4>
         </div>
+        <img class="spot-pic" src="../images/spot-peets.jpg">
         <div class="info" ng-click="findSpot()"> 
           <h4 class="title">Peet's Coffee & Tea</h4>
           <h5 class="address">448 University Ave. Palo Alto</h5>
@@ -86,11 +88,11 @@
           </div>
           <div class="crowd-rank">
             <div class="crowd-bar">
-              <div class="box"></div>
-              <div class="box"></div>
-              <div class="box"></div>
-              <div class="box"></div>
-              <div class="box"></div>
+              <div class="box empty-square"></div>
+              <div class="box few-square"></div>
+              <div class="box ave-square"></div>
+              <div class="box crowded-square"></div>
+              <div class="box herd-square"></div>
             </div>
             <div class="watchers">549 Watchers</div>
           </div>
@@ -102,7 +104,8 @@
         <div class="rank">
           <h4>3.</h4>
         </div>
-        <div class="info" ng-click="findSpot()"> 
+        <img class="spot-pic" src="../images/spot-coupa.jpg">
+        <div class="info" ng-click="findSpot()">
           <h4 class="title">Coupa Cafe</h4>
           <h5 class="address">638 Ramona St. Palo Alto</h5>
           <div class="rating">
@@ -117,11 +120,11 @@
           </div>
           <div class="crowd-rank">
             <div class="crowd-bar">
-              <div class="box"></div>
-              <div class="box"></div>
-              <div class="box"></div>
-              <div class="box"></div>
-              <div class="box"></div>
+              <div class="box empty-square"></div>
+              <div class="box few-square"></div>
+              <div class="box ave-square"></div>
+              <div class="box ave-square"></div>
+              <div class="box crowded-square"></div>
             </div>
             <div class="watchers">549 Watchers</div>
           </div>
