--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -481,6 +481,10 @@ input[type='text']:focus {
     border-radius: 10px;
     padding: 10px 15px;
 
+    .main-col {
+      padding-top: 30px;
+    }
+
     h2 {
       display: inline-block;
       padding: 0 0 0 20px;
@@ -492,7 +496,7 @@ input[type='text']:focus {
     }
 
     form {
-      margin: 25px 0 0 100px;
+      margin: 5px 0 0 100px;
     }
 
     h4 {
