--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -56,11 +56,11 @@
           </div>
           <div class="crowd-rank">
             <div class="crowd-bar">
-              <div class="box empty-square"></div>
+              <div class="box ave-square"><h6>11am</h6></div>
               <div class="box few-square"></div>
-              <div class="box crowded-square"></div>
+              <div class="box crowded-square"><h6>1pm</h6></div>
               <div class="box herd-square"></div>
-              <div class="box herd-square"></div>
+              <div class="box herd-square"><h6>3pm</h6></div>
             </div>
             <div class="watchers">549 Watchers</div>
           </div>
@@ -88,11 +88,11 @@
           </div>
           <div class="crowd-rank">
             <div class="crowd-bar">
-              <div class="box empty-square"></div>
+              <div class="box empty-square"><h6>11am</h6></div>
               <div class="box few-square"></div>
-              <div class="box ave-square"></div>
+              <div class="box ave-square"><h6>1pm</h6></div>
               <div class="box crowded-square"></div>
-              <div class="box herd-square"></div>
+              <div class="box herd-square"><h6>3pm</h6></div>
             </div>
             <div class="watchers">549 Watchers</div>
           </div>
@@ -120,11 +120,11 @@
           </div>
           <div class="crowd-rank">
             <div class="crowd-bar">
-              <div class="box empty-square"></div>
+              <div class="box few-square"><h6>11am</h6></div>
               <div class="box few-square"></div>
+              <div class="box ave-square"><h6>1pm</h6></div>
               <div class="box ave-square"></div>
-              <div class="box ave-square"></div>
-              <div class="box crowded-square"></div>
+              <div class="box crowded-square"><h6>3pm</h6></div>
             </div>
             <div class="watchers">549 Watchers</div>
           </div>
