Add current status to listings.

--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -65,6 +65,10 @@
             <div class="watchers">549 Watchers</div>
           </div>
         </div>
+        <div class="current-status">
+          <h4>Current Status:</h4>
+          <h3 class="status ave">Average</h3>
+        </div>
         <hr>
       </div>
 
@@ -97,6 +101,10 @@
             <div class="watchers">549 Watchers</div>
           </div>
         </div>
+        <div class="current-status">
+          <h4>Current Status:</h4>
+          <h3 class="status empty">Empty</h3>
+        </div>
         <hr>
       </div>
 
@@ -128,6 +136,10 @@
             </div>
             <div class="watchers">549 Watchers</div>
           </div>
+        </div>
+        <div class="current-status">
+          <h4>Current Status:</h4>
+          <h3 class="status few">Few</h3>
         </div>
         <hr>
       </div>
