--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -596,6 +596,17 @@ input[type='text']:focus {
       margin-top: 15px;
       width: 100%;
     }
+
+    .current-status {
+      display: inline-block;
+      float: left;
+      margin: -90px 0 0 430px;
+    }
+
+    .status {
+      margin: 0 0 0 68px;
+    }
+
   }
 
   .map {
