Move cursor and listing link back to listing div.

--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -36,12 +36,12 @@
     <div class="listings main-col">
       <h6>1-10 of 100</h6>
 
-      <div class="listing">
+      <div class="listing" ng-click="findSpot()">
         <div class="rank">
           <h4>1.</h4>
         </div>
         <img class="spot-pic" src="../images/spot-philz.jpg">
-        <div class="info" ng-click="findSpot()"> 
+        <div class="info"> 
           <h4 class="title">Philz Coffee</h4>
           <h5 class="address">101 Forest Ave. Palo Alto</h5>
           <div class="rating">
@@ -72,12 +72,12 @@
         <hr>
       </div>
 
-      <div class="listing">
+      <div class="listing" ng-click="findSpot()">
         <div class="rank">
           <h4>2.</h4>
         </div>
         <img class="spot-pic" src="../images/spot-peets.jpg">
-        <div class="info" ng-click="findSpot()"> 
+        <div class="info"> 
           <h4 class="title">Peet's Coffee & Tea</h4>
           <h5 class="address">448 University Ave. Palo Alto</h5>
           <div class="rating">
@@ -108,12 +108,12 @@
         <hr>
       </div>
 
-      <div class="listing">
+      <div class="listing" ng-click="findSpot()">
         <div class="rank">
           <h4>3.</h4>
         </div>
         <img class="spot-pic" src="../images/spot-coupa.jpg">
-        <div class="info" ng-click="findSpot()">
+        <div class="info">
           <h4 class="title">Coupa Cafe</h4>
           <h5 class="address">638 Ramona St. Palo Alto</h5>
           <div class="rating">
