Add new elements to spot page title bar: current status, map and ad.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -635,6 +635,15 @@ input[type='text']:focus {
     background-color: $acc-light;
     border-radius: 10px;
     padding: 10px 15px;
+
+    .details-left {
+      display: inline-block;
+    }
+
+    .details-right {
+      display: inline-block;
+      margin: 0 0 20px 20px;
+    }
   }
 
   .type {
